--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
+version = "1.7.10-0.7-gyro-exp"
 group= "exterminatorJeff.undergroundBiomes" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+archivesBaseName = "undergroundBiomes"
 
 minecraft {
     version = "1.7.10-10.13.2.1340-1.7.10"
